@@ -10,8 +10,10 @@ postgresql-common (139) UNRELEASED-experimental; urgency=low
   * testsuite: Require netcat-openbsd to be installed.
   * testsute 005_PgCommon: Do the ipv4 tests before the ipv6 ones; skip
     the ipv6 for perl <= 5.10 (i.e. on squeeze and lucid).
+  * PgCommon.pm, pg_ctlcluster, pg_createcluster: 9.3 renames
+    unix_socket_directory to unix_socket_directories.
 
- -- Christoph Berg <myon@debian.org>  Mon, 17 Dec 2012 12:19:31 +0100
+ -- Christoph Berg <myon@debian.org>  Thu, 03 Jan 2013 16:27:40 +0100
 
 postgresql-common (138) experimental; urgency=low
 
